# genai-webapp-python

./: LICENSE  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: server.py
frontend/: Dockerfile  pyproject.toml
frontend/.streamlit/: config.toml
frontend/app/: Home.py
frontend/app/pages/: AWS Bedrock Chatbot.py  Azure OpenAI Chatbot.py
