[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Marty Sullivan <marty@martysullivan.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
langserve = {extras = ["client"], version = ">=0.0.30"}
streamlit = "<2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
